Add delete book

--- a/src/main/resources/com/dodyrw/bookstoreku/pages/book/DeleteBook.tml
+++ b/src/main/resources/com/dodyrw/bookstoreku/pages/book/DeleteBook.tml
@@ -4,6 +4,6 @@
       xmlns:p="tapestry:parameter">
         <!-- Most of the page content, including <head>, <body>, etc. tags, comes from Layout.tml -->
 
-    delete
+    Book has been deleted.
     
 </html>
