--- a/src/main/resources/com/dodyrw/bookstoreku/components/Layout.tml
+++ b/src/main/resources/com/dodyrw/bookstoreku/components/Layout.tml
@@ -12,6 +12,7 @@
     <ul>
     	<li><t:pagelink page="index">Home</t:pagelink></li>
     	<li><t:pagelink page="book/list">Book</t:pagelink></li>
+    	<li><t:pagelink page="category/list">Category</t:pagelink></li>
     	<li><t:pagelink page="about">About</t:pagelink></li>
     	<li><t:pagelink page="contact">Contact</t:pagelink></li>
     </ul>
