--- a/src/main/resources/com/dodyrw/bookstoreku/pages/book/CreateBook.tml
+++ b/src/main/resources/com/dodyrw/bookstoreku/pages/book/CreateBook.tml
@@ -2,7 +2,7 @@
       xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd"
       xmlns:p="tapestry:parameter">
 
-	<t:form t:id="books">
+	<t:form t:id="book">
             <t:errors/>
             <table>
                 <tr>
